# Code-Index-MCP

./: .claude.json  .coveragerc  .dockerignore  .env.docker  .env.example  .env.native  .env.production.template  .env.staging.template  .flake8  .gitignore  .index_metadata.json  .last-ai-sync  .mcp-index-ignore  .mcp-index.json  .mcp.env.example  .mcp.json  .mcp.json.backup  .mcp.json.docker  .mcp.json.example  .mcp.json.fixed  .mcp.json.template  ADAPTIVE_CHUNKING_IMPLEMENTATION.md  AGENTS.md  ARCHITECTURE.md  AUTHENTIC_MCP_VS_NATIVE_ANALYSIS.md  BREAKING-CHANGES.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_COMPATIBILITY_UPDATE.md  CLEANUP_VERIFICATION_REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_PARALLEL_TESTING_PLAN.md  COMPREHENSIVE_REPOSITORY_TEST_REPORT.md  COMPREHENSIVE_RESEARCH_GRADE_MCP_ANALYSIS_REPORT.md  COMPREHENSIVE_REVIEW_REPORT.md  CONFIG_PLUGIN_TESTING_SUMMARY.md  CONTEXTUAL_EMBEDDINGS_SUMMARY.md  CONTRIBUTING.md  CSHARP_PLUGIN_COMPREHENSIVE_TEST_REPORT.json  CSHARP_PLUGIN_TEST_SUMMARY.md  (+255 more)
.claude/: docs-catalog.json  settings.json
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.githooks/: post-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.mcp-index/: README.md
.mcp.json.templates/: auto-detect.json  docker-minimal.json  docker-sidecar.json  docker-standard.json  native.json  wsl-docker.json
.metadata/: .complexity_assessment  .index_metadata.json  artifact-metadata.json
ai_docs/: MCP.md  README.md  black_isort_overview.md  celery_overview.md  docker_overview.md  fastapi_overview.md  github_actions_overview.md  grpc_overview.md  jedi.md  jwt_authentication_overview.md  memgraph_overview.md  mypy_overview.md  plantuml_reference.md  prometheus_overview.md  pydantic_overview.md  pytest_overview.md  qdrant.md  redis.md  sqlite_fts5_overview.md  tree_sitter_overview.md  voyage_ai_overview.md  watchdog.md
analysis_archive/: ALIGNMENT_PLAN_2025-01-06.md  ARCHITECTURE_UPDATE_SUMMARY_2025-01-06.md  CENTRALIZED_INDEX_SUMMARY.md  CLAUDE_CODE_BEHAVIOR_ANALYSIS_REPORT.md  CLAUDE_CODE_MCP_ANALYSIS.md  COMPREHENSIVE_MCP_ANALYSIS_REPORT.md  COMPREHENSIVE_MCP_ANALYSIS_REPORT_2025-06-16.md  CONCRETE_EXAMPLES_SHOWCASE.md  DOCUMENTATION_UPDATE_REPORT_2025-01-06.md  FINAL_COMPREHENSIVE_MCP_VS_NATIVE_REPORT.md  FINAL_MCP_ANALYSIS_REPORT.md  FINAL_MCP_VALIDATION_REPORT.md  FINAL_MCP_VS_NATIVE_PERFORMANCE_REPORT.md  GIT_INTEGRATION_SUMMARY.md  GIT_INTEGRATION_TEST_REPORT.md  MCP_ANALYSIS_CORRECTED.md  MCP_DEBUGGING_SUMMARY.md  MCP_DISPATCHER_FIX_PLAN.md  MCP_FINAL_IMPLEMENTATION_REPORT.md  MCP_FIX_IMPLEMENTATION_STATUS.md  MCP_FIX_SUMMARY.md  MCP_PERFORMANCE_ANALYSIS_FINAL.md  MCP_PERFORMANCE_ANALYSIS_REPORT.md  MCP_PERFORMANCE_ANALYSIS_SUMMARY.md  MCP_PERFORMANCE_TEST_REPORT.md  MCP_RETRIEVAL_VERIFICATION_REPORT.md  MCP_VALIDATION_SUMMARY.md  MCP_VS_NATIVE_ANALYSIS.md  MCP_VS_NATIVE_FINAL_REPORT.md  MCP_VS_NATIVE_INTERIM_ANALYSIS.md  MCP_VS_NATIVE_PATH_FIX_SUMMARY.md  MCP_VS_NATIVE_TESTING_COMPLETE_STATUS.md  MCP_VS_NATIVE_TESTING_PLAN_STATUS.md  MCP_VS_NATIVE_TESTING_STATUS_UPDATE.md  OPTIMIZATION_ROADMAP_2025.md  PERFORMANCE_COMPARISON.md  README.md  REAL_DATA_MCP_PERFORMANCE_ANALYSIS.md  REFACTORING_SUMMARY.md  SEMANTIC_VS_SQL_RETRIEVAL_ANALYSIS.md  (+35 more)
architecture/: AGENTS.md  ARCHITECTURE_ALIGNMENT_REPORT.md  ARCHITECTURE_CONSOLIDATION.md  ARCHITECTURE_FIXES.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  code-index-mcp-architecture.dsl  data_model.md  document_processing_architecture.md  index_artifact_architecture.md  level1_context.dsl  level2_containers.dsl  level3_mcp_components.dsl  level3_mcp_components_actual.dsl  multi_repository_architecture.md  path_management_architecture.md  performance_requirements.md  portable_index_architecture.md  security_model.md  specialized_plugins_architecture.md  workspace.dsl
archive/: README.md  complete_indexing_results.json  mcp_direct_test_results.json  mcp_path_fix_test_results.json  mcp_search_code_test_results.json  multi_repo_search_test_results.json  qdrant_server_mode.patch  real_quick_results.json
baml_src/: clients.baml  generators.baml  summarization.baml
benchmarks/: benchmark_csv_plugin.py  indexing_speed_benchmark.py  semantic_search_benchmark.py  symbol_lookup_benchmark.py
comprehensive_real_results/: comprehensive_real_analysis_1750977545.json
comprehensive_semantic_results/: comprehensive_semantic_analysis_1750993310.json
config/: mypy_baseline.json
docker/: README.md
docs/: API-REFERENCE.md  CENTRALIZED_INDEX_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY_2025-01-06.md  CONTEXTUAL_EMBEDDINGS_ARCHITECTURE_UPDATE.md  DEPLOYMENT-GUIDE.md  DOCKER_GUIDE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_FILES_TO_CONSOLIDATE.md  DYNAMIC_PLUGIN_LOADING.md  FILE_CONSOLIDATION_SUMMARY.md  GETTING_STARTED.md  GIT_HOOKS_DOCUMENTATION.md  HISTORICAL-ARTIFACTS-TRIAGE.md  IGNORE_PATTERNS_BEHAVIOR.md  INDEX_COMPATIBILITY_GUIDE.md  INDEX_MANIFEST_CONTRACT.md  LOCAL_INDEX_STORAGE.md  MARKDOWN_INDEX.md  MCP_CONFIGURATION.md  MCP_INDEX_SHARING.md  MCP_SUB_AGENT_FIX.md  MONITORING_FRAMEWORK.md  MULTI_PATH_INDEX_DISCOVERY.md  NON_CORE_FILES_STATUS.md  PATH_MANAGEMENT_SOLUTION.md  PERFORMANCE_COMPARISON.md  PHASE4_ADVANCED_FEATURES.md  PHASE5_IMMEDIATE_ACTIONS.md  PHASE5_IMPLEMENTATION_GUIDE.md  PHASE5_PARALLEL_EXECUTION_PLAN.md  PLUGIN_TEMPLATE_SYSTEM.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START_PHASE4.md  README.md  SMART_PARSER_GUIDE.md  SUPPORT_MATRIX.md  TESTING-GUIDE.md  TEST_EXECUTION_GUIDE.md  (+4 more)
examples/: api_handler.js  csv_plugin_showcase.py  demo_agent_context.py  demo_contextual_embeddings.py  demo_contextual_integration.py  demo_csv_analysis.py  demo_diff_generation.py  demo_distributed.py  demo_enhanced_indexer.py  demo_hybrid_search.py  demo_index_management.py  demo_indexer.py  demo_smart_parser.py  (+12 more)
mcp_server/plugins/haskell_plugin/test_data/: Tutorial.lhs  WebApp.hs  complex.hs  myproject.cabal  package.yaml  sample.hs  stack.yaml
mcp_server/plugins/toml_plugin/test_data/: Cargo.toml  config.toml  hugo.toml  pyproject.toml
(+2390 files in other folders)
