[project]
name = "mcp_server"
version = "0.0.0"
description = "Local-first MCP server"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "watchdog>=4.0",
  "tree-sitter>=0.20.0",
  "tree-sitter-languages>=1.8.0",
  "jedi>=0.19.0",
  "mcp>=1.9.0",
  "voyageai>=0.2.0",
  "qdrant-client>=1.7.0",
  "python-dotenv>=1.0.0",
  "psutil>=7.1.3",
  "passlib>=1.7.4",
  "prometheus-client>=0.23.1",
  "pytest-cov>=7.0.0",
  "pytest-benchmark>=5.2.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
exclude = ["tests*", "data*", "logs*", "config*", "backup*", "docker*", "ai_docs*", "test_results*", "architecture*", "nginx*", "k8s*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
