[project]
name = "index-it-mcp"
version = "1.2.0-rc5"
description = "Local-first code indexer for AI assistants via Model Context Protocol (MCP)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Jenner Torrence"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
keywords = ["mcp", "code-indexer", "ai", "llm", "claude", "code-search", "tree-sitter"]

# Core dependencies - includes voyageai/qdrant for imports (features require API keys)
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "treesitter-chunker==2.2.21",
    # Legacy tree-sitter deps (for backward compatibility during migration)
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-languages>=1.7.0; sys_platform=='linux'",
    "jedi>=0.19.0",
    "watchdog>=3.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.1",
    "pyyaml>=6.0.0",
    # Required for module imports (actual features need API keys)
    "voyageai>=0.2.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "baml-py>=0.220.0",
]

[project.optional-dependencies]
semantic = [
    # Additional semantic search features (reranking, transformers)
    "openai>=1.51.0",
    "sentence-transformers>=2.0.0",
    "cohere>=4.0.0",
    "anthropic>=0.18.0",
    "flashrank>=0.2.0",
    # Caching backend (optional, for semantic search result caching)
    "redis>=4.5.0",
    # Monitoring
    "prometheus-client>=0.17.0",
    # Security extras used by semantic/auth endpoints
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.4",
    # Template rendering (used by benchmark_runner)
    "jinja2>=3.1.2",
]
rerank = [
    "flashrank>=0.2.0",
]
java = [
    # Java language plugin: static analysis / import resolution
    "javalang>=0.13.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.1",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.1",
    # Extended testing utilities
    "hypothesis>=6.82.0",
    "factory-boy>=3.3.0",
    "faker>=19.6.1",
    "responses>=0.23.3",
    "freezegun>=1.2.2",
    "tomli>=2.0.1; python_version<\"3.11\"",
    "pytest-httpx>=0.22.0",
    "aiofiles>=23.2.1",
    # Code quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    # Coverage
    "coverage[toml]>=7.3.0",
    # Security scanning
    "safety>=3.0.0",
    "bandit>=1.7.5",
    # Type stubs
    "types-requests>=2.31.0",
    "types-setuptools>=68.0.0",
    # Profiling & analysis
    "line-profiler>=4.0.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.0",
    "radon>=6.0.0",
    # Extended debugging
    "asynctest>=0.13.0",
    "ipdb>=0.13.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    # Linting (additional)
    "pydocstyle>=6.3.0",
    "pylint>=3.0.0",
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "tabulate>=0.9.0",
]
production = [
    "redis>=5.0",
    "hiredis>=2.2.0",
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "python-json-logger>=2.0.0",
]
all = [
    "index-it-mcp[semantic,rerank,java,dev,production]",
]

[project.scripts]
mcp-index = "mcp_server.cli:cli"
code-index-mcp = "mcp_server.cli:cli"
index-it-mcp = "mcp_server.cli:cli"

[project.urls]
Homepage = "https://github.com/ViperJuice/Code-Index-MCP"
Documentation = "https://github.com/ViperJuice/Code-Index-MCP#readme"
Repository = "https://github.com/ViperJuice/Code-Index-MCP"
Issues = "https://github.com/ViperJuice/Code-Index-MCP/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
exclude = ["tests*", "data*", "logs*", "config*", "backup*", "docker*", "ai_docs*", "test_results*", "architecture*", "nginx*", "k8s*"]

[tool.setuptools.package-data]
mcp_server = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
